--- a/styles/sass/_config.scss
+++ b/styles/sass/_config.scss
@@ -58,8 +58,12 @@ $main-black: hsl(0, 0%, 21%);
   background-color: $main-color3;
   border-radius: 20px;
   -webkit-box-shadow: -1px 1px 14px -2px rgba(0, 0, 0, 0.247);
-  box-shadow: -1px 1px 14px -2px rgba(0, 0, 0, 0.205);
+  box-shadow: 0px 14px 14px 0px rgba(0, 0, 0, 0.062);
   padding: 40px;
+  width: 600px;
+  &:hover {
+    box-shadow: 0px 14px 14px 0px rgba(0, 0, 0, 0.075);
+  }
 
   @media screen and (max-width: 640px) {
     min-width: 350px;
