--- a/styles/App.scss
+++ b/styles/App.scss
@@ -9,8 +9,13 @@
 @import "./sass/filterTool";
 @import "./sass/login";
 @import "./sass/register";
+@import "./sass/offerDetails";
 @import "./sass/LandlordDetails";
+@import "./sass/offerImages";
 @import "./sass/OfferSpecification";
+@import "./sass/offerDescription";
+@import "./sass/otherOffers";
+@import "./sass/profile";
 
 * {
   box-sizing: border-box;
